--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="shortcut icon" href="imgages/profile-image.jpg" type="image/x-icon">
 
         <title>My Profile</title>
 
@@ -177,7 +178,7 @@
                             <table>
                                 <tr>
                                     <td>Web Technologies</td>
-                                    <td> HTML, CSS, PHP, Java Script</td>
+                                    <td> HTML, CSS, PHP, JavaScript</td>
                                 </tr>
                                 <tr>
                                     <td>Programming Languages</td>
@@ -185,7 +186,7 @@
                                 </tr>
                                 <tr>
                                     <td>DBMS Tools</td>
-                                    <td>ORACLE, SQL, SQL Server</td>
+                                    <td>ORACLE, mySQL, SQL Server</td>
                                 </tr>
                                 <tr>
                                     <td>Operating Systems</td>
@@ -197,7 +198,7 @@
                                 </tr>
                                 <tr>
                                     <td>Others</td>
-                                    <td>MS-Office, Photoshop, CorelDraw</td>
+                                    <td>MS-Office, Photoshop, CorelDraw, Premiere Pro</td>
                                 </tr>
                             </table>
                         </div>    
@@ -257,7 +258,7 @@
                                 </tr>
                                 <tr>
                                     <td>Tools</td>
-                                    <td>Visual Basic .Net, MS-Access</td>
+                                    <td>Visual Basic .Net, SQL Server</td>
                                 </tr>
                                 <tr>
                                     <td>Team Size / Role</td>
@@ -270,11 +271,11 @@
                             </table>
                             <table>
                                 <tr>
-                                    <th colspan="2"><i class="fas fa-globe"></i> CIMAGE College Website ( <a href="https://tinyurl.com/y7c8bfs2" target="_blank">Go to Website</a>)</th>
+                                    <th colspan="2"><i class="fas fa-globe"></i> CIMAGE College Website ( <a href="https://cimage.netlify.com" target="_blank">Go to Website</a>)</th>
                                 </tr>
                                 <tr>
                                     <td>Tools</td>
-                                    <td>HTML, CSS, Java Script, PHP, My SQl</td>
+                                    <td>HTML, CSS, JavaScript, PHP, mySQL</td>
                                 </tr>
                                 <tr>
                                     <td>Team Size / Role</td>
@@ -287,11 +288,11 @@
                             </table>
                             <table>
                                 <tr>
-                                    <th colspan="2"><i class="fas fa-globe"></i> My Profile</th>
+                                    <th colspan="2"><i class="fas fa-globe"></i> My Profile ( <a href="https://shekhar.netlify.com" target="_blank">Go to Website</a>)</th>
                                 </tr>
                                 <tr>
                                     <td>Tools</td>
-                                    <td>HTML, CSS, Java Script, PHP, My SQl</td>
+                                    <td>HTML, CSS, JavaScript, PHP, mySQL</td>
                                 </tr>
                                 <tr>
                                     <td>Team Size / Role</td>
