--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="shortcut icon" href="imgages/profile-image.jpg" type="image/x-icon">
+        <link href='images/profile-image.jpg' rel='icon' type='image/x-icon'/>
 
         <title>My Profile</title>
 
