--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                          <div class="social">
                             <ul>
                                 <li><a href="https://www.facebook.com/rajababusharma20" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-whatsapp" title="9122087872"></i></a></li>
+                                <li><a href="whatsapp://send?phone=919122087872"><i class="fab fa-whatsapp" title="9122087872"></i></a></li>
                                 <li><a href="https://www.twitter.com/rajababusharma2" target="_blank"><i class="fab fa-twitter"></i></a></li>
                                 <li><a href="https://www.instagram.com/rajababusharma20" target="_blank"><i class="fab fa-instagram"></i></a></li>
                                 <li><a href="https://www.youtube.com/channel/UCy3i_vPaIXm2R0jkg1Hr-5A" target="_blank"><i class="fab fa-youtube"></i></a></li>
