--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                     <br>10<sup>th</sup> June 1995
                                 </li><hr>                            
                                 <li><strong><i class="far fa-envelope"></i> Email :</strong>
-                                    <br>rajababusharma20@gmail.com
+                                    <br>chandrashekharkumarthakur@gmail.com
                                 </li><hr>                            
                                 <li><strong><i class="fas fa-phone-volume"></i> Mobile :</strong>
                                     <br>+91 - 9122 087 872<br>+91 - 9315 269 206
