--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <div class="profile-box">
                         <h3 class="heading"><i class="fas fa-envelope"></i> Contact me</h3>
-                        <form action="php/send-mail.php" method="post">
+                        <form method="POST" data-netlify="true">
                             <table>
                                 <tr>
                                     <td>
