--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <div class="profile-box">
                         <h3 class="heading"><i class="fas fa-envelope"></i> Contact me</h3>
-                        <form method="POST" data-netlify="true">
+                        <form method="POST" data-netlify="true" data-netlify-recaptcha="true">
                             <table>
                                 <tr>
                                     <td>
@@ -110,6 +110,14 @@
                                         </div>
                                     </td>
                                 </tr>
+                                <tr>
+                                    <td>
+                                        <div class="input-box">
+                                            <div data-netlify-recaptcha="true"></div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                
                                 <tr>
                                     <td>
                                         <button type="submit" style="margin: 0;width: 100%;"><i class="fas fa-envelope"></i> Send Message</button>
